HTML 記述もれ追記

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Document</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="styles/vertical-ruler.css" rel="stylesheet" type="text/css" media="all" />
 
   </head>
 
@@ -39,14 +40,29 @@
             </div>
             <div id="content03" class="content content03">
               <h2>How to Use</h2>
-              <p>下記 HTML を &lt;body&gt; 内に記述</p>
-              <pre class="prettyprint lang-html linenums">
-                &lt;div id=&quot;ruler&quot; class=&quot;ruler&quot;&gt;&lt;/div&gt;
-              </pre>
-              <p>vertical-ruler.js を &lt;body&gt; 内に記述</p>
-              <pre class="prettyprint lang-html linenums">
-                &lt;script src=&quot;./vertical-ruler.js&quot;&gt;&lt;/script&gt;
-              </pre>
+              <ul>
+                <li class="mt_30">
+                  <p>vertical-ruler.js を &lt;body&gt; 内に記述</p>
+                  <pre class="prettyprint lang-html linenums">
+                    &lt;script src=&quot;./vertical-ruler.js&quot;&gt;&lt;/script&gt;
+                  </pre>
+
+                </li>
+                <li class="mt_30">
+                  <p>vertical-ruler.css を &lt;head&gt; 内に記述</p>
+                  <pre class="prettyprint lang-html linenums">
+                    &lt;link href=&quot;styles/vertical-ruler.css&quot; rel=&quot;stylesheet&quot; type=&quot;text/css&quot; media=&quot;all&quot; /&gt;
+                  </pre>
+
+                </li>
+                <li class="mt_30">
+                  <p>下記 HTML を &lt;body&gt; 内に記述</p>
+                  <pre class="prettyprint lang-html linenums">
+                    &lt;div id=&quot;ruler&quot; class=&quot;ruler&quot;&gt;&lt;/div&gt;
+                  </pre>
+
+                </li>
+              </ul>
             </div>
             <div id="content04" class="content content04">
               <p class="copy">made with ❤️ by @yothic8</p>
