--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <h1>JS Vertical Ruler</h1>
               <p>Version 1.0</p>
               <div class="mt_30">
-                <iframe src="http://ghbtns.com/github-btn.html?user=YoshinoriKanno&repo=js-vertical-ruler&type=watch&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="77" height="30"></iframe>
+                <iframe src="https://ghbtns.com/github-btn.html?user=YoshinoriKanno&repo=js-vertical-ruler&type=watch&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="77" height="30"></iframe>
 
               </div>
             </div>
